[package]
name = "udv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Blazingly fast data versioning"
readme = "README.md"
repository = "https://github.com/code-inflation/udv/"
keywords = ["data-versioning", "cli", "dvc", "dataset"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
md5 = "0.7.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha2 = "0.10.8"
toml = "0.8.17"

[dev-dependencies]
tempfile = "3.10.1"
